objects/nSBA__Account_Debt__c.object
<CustomObject>
    <fields>
        <fullName>nSBA__Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Debt</relationshipLabel>
        <relationshipName>Account_Debt</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>nSBA__Loan_Amount__c</fullName>
        <description>Loan Amount</description>
        <inlineHelpText>Loan Amount</inlineHelpText>
        <label>Loan Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Loan_Term_Months__c</fullName>
        <description>Loan Term in Months</description>
        <inlineHelpText>Loan Term in Months</inlineHelpText>
        <label>Loan Term Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nSBA__SBA_Approval_Date__c</fullName>
        <description>SBA Approval Date</description>
        <inlineHelpText>SBA Approval Date</inlineHelpText>
        <label>SBA Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>nSBA__SBA_Guaranty_Percentage__c</fullName>
        <description>SBA Guaranty Percentage</description>
        <inlineHelpText>SBA Guaranty Percentage</inlineHelpText>
        <label>SBA Guaranty Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>nSBA__SBA_Loan_Number__c</fullName>
        <description>SBA Loan Number</description>
        <inlineHelpText>SBA Loan Number</inlineHelpText>
        <label>SBA Loan Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Account Debt</label>
    <nameField>
        <label>Account Debt Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Debt</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>